fix: [PIE-5042]: horizontal scroll in modal dialog

--- a/packages/uicore/src/components/ModalDialog/ModalDialog.css
+++ b/packages/uicore/src/components/ModalDialog/ModalDialog.css
@@ -80,7 +80,6 @@
 .body::after {
   content: '';
   position: sticky;
-  margin: 0 calc(-1 * var(--spacing-huge));
   top: 0;
   height: 1px;
   background-color: var(--grey-200);
